src/objects/BookingBug_Data__c.object
<CustomObject>
    <description>To store Booking Bug data like Bookings, Customers, Logins and other.</description>
    <fields>
        <fullName>Booking__c</fullName>
        <description>Data surrounding an appointment where a client engages with an organisation.</description>
        <encrypted>true</encrypted>
        <label>Booking</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Clients__c</fullName>
        <description>A consumer whose details are in the Bookingbug system.</description>
        <label>Clients</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Extra1__c</fullName>
        <description>Additional column for future data.</description>
        <label>Extra1</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Extra2__c</fullName>
        <description>Additional column for future data.</description>
        <label>Extra2</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Login__c</fullName>
        <description>A record that details people who are entitled to login to the organisation.</description>
        <label>Login</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Resources__c</fullName>
        <description>The resource(room, lab etc) where the engagement will be carried out.</description>
        <label>Resources</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Service__c</fullName>
        <description>The types of engagements that clients can have with an organisation. Determines the length of the appointment.</description>
        <label>Service</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Staff__c</fullName>
        <description>The staff member(s) responsible for carrying out the engagement.</description>
        <label>Staff</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <label>BookingBug Data</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>{0}</displayFormat>
        <label>BookingBug Data Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>BookingBug Data</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>